syntax = "proto3";
package Proto.Lego.Workflow;
option csharp_namespace = "Proto.Lego.Workflow";

import "google/protobuf/any.proto";

message WorkflowState {
	bool completed = 1;
	WorkflowResult result = 2;
	repeated string aggregates_to_clean_up = 3;
	google.protobuf.Any input = 4;
}

message WorkflowResult {
	bool succeeded = 1;
	repeated string error_messages = 2;
}

message Trigger {

}